# orchcore

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  release-please-config.json  zensical.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  publish-test.yml  publish.yml  release-please.yml  scorecards.yml
doc/: index.md
doc/architecture/: design.md  overview.md  stream-pipeline.md
doc/architecture/adrs/: 001-extract-reusable-orchestration-core.md  002-async-first-architecture-with-asyncio.md  003-protocol-based-ui-decoupling.md  004-composable-stream-processing-pipeline.md  005-multi-source-layered-configuration.md  006-pydantic-for-all-data-models.md  007-registry-pattern-for-agent-management.md  008-partial-failure-semantics-with-retry.md  009-tool-assignment-as-phase-level-concern.md  010-topological-phase-ordering-and-success-semantics.md  011-consumer-defined-flag-profiles.md
doc/development/: contributing.md
doc/getting-started/: installation.md  quickstart.md
doc/guides/: agent-registry.md  display.md  flow-control.md  observability.md  prompt-templating.md  recovery-and-retry.md  signal-handling.md  workspace.md  writing-a-uicallback.md
doc/reference/: configuration.md  stream-events.md  ui-callback.md
examples/: quickstart.py
scripts/: check_coverage_thresholds.py  check_readme_example.py  resolve_dist_artifact.py  run_smoke_test.py
src/orchcore/: __init__.py  __main__.py  _pathsafe.py
src/orchcore/config/: __init__.py  schema.py  settings.py
src/orchcore/display/: __init__.py  formatting.py  logging.py
src/orchcore/observability/: __init__.py  telemetry.py
src/orchcore/pipeline/: __init__.py  control.py  engine.py  phase.py  pipeline.py
src/orchcore/prompt/: __init__.py  loader.py  template.py
src/orchcore/recovery/: __init__.py  git_recovery.py  rate_limit.py  retry.py
src/orchcore/registry/: __init__.py  agent.py  registry.py  versioning.py
src/orchcore/runner/: __init__.py  subprocess.py
src/orchcore/signals/: __init__.py  handler.py
src/orchcore/stream/: __init__.py  events.py  filter.py  monitor.py  parser.py  stall.py
src/orchcore/stream/formats/: __init__.py  _shared.py  claude.py  codex.py  copilot.py  gemini.py  opencode.py
src/orchcore/ui/: __init__.py  callback.py
src/orchcore/workspace/: __init__.py  manager.py
tests/: conftest.py  test_keyword_only_api.py  test_models_roundtrip.py  test_package_metadata.py
tests/fixtures/: mock_agent.py  mock_claude.sh  sessions.py
tests/test_config/: test_settings.py
tests/test_display/: test_logging.py
tests/test_integration/: __init__.py  test_agent_runner_stream_integration.py  test_config_registry_integration.py  test_pipeline_integration.py
tests/test_observability/: test_telemetry.py
tests/test_pipeline/: test_control.py  test_engine.py  test_phase.py  test_pipeline.py  test_pipeline_ordering_hypothesis.py
tests/test_prompt/: test_loader.py  test_template.py
tests/test_recovery/: test_git_recovery.py  test_rate_limit.py  test_retry.py
tests/test_registry/: test_agent.py  test_registry.py  test_versioning.py
tests/test_runner/: test_subprocess.py
tests/test_signals/: test_handler.py
tests/test_stream/: test_filter.py  test_monitor.py  test_parser.py  test_parser_golden.py  test_parser_hypothesis.py  test_stall.py
tests/test_stream/golden/: claude.json  codex.json  copilot.json  gemini.json  opencode.json
tests/test_ui/: test_callback.py
tests/test_workspace/: test_manager.py
