[build-system]
requires = ["hatchling>=1.21", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "orchcore"
dynamic = ["version"]
description = "Reusable orchestration core for AI coding agent CLI pipelines"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Abdelaziz Abdelrasol" },
]
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "jinja2>=3.1",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
tui = ["textual>=0.40"]
telemetry = [
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
]
dev = [
    "hypothesis>=6.100",
    "mypy>=1.13",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pyright>=1.1",
    "ruff>=0.8",
    "coverage>=7.0",
]

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/orchcore/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/orchcore"]

[tool.pyright]
pythonVersion = "3.12"

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]
exclude = ["src/orchcore/_version.py"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TCH",   # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "S",     # flake8-bandit
    "RUF",   # ruff-specific rules
]
ignore = ["S101"]  # allow assert in tests

[tool.ruff.lint.isort]
known-first-party = ["orchcore"]

[tool.coverage.run]
source = ["orchcore"]

[tool.coverage.report]
show_missing = true
fail_under = 90
