[build-system]
requires = ["hatchling>=1.21", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "orchcore"
dynamic = ["version"]
description = "Reusable orchestration core for AI coding agent CLI pipelines"
requires-python = ">=3.12"
readme = "README.md"
license = "MIT"
authors = [
    { name = "Abdelaziz Abdelrasol" },
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: AsyncIO",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]
dependencies = [
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "jinja2>=3.1",
    "tzdata>=2024.1",
]

[project.optional-dependencies]
rich = ["rich>=13.0"]
tui = ["textual>=0.40"]
telemetry = [
    "opentelemetry-api>=1.29",
    "opentelemetry-sdk>=1.29",
    "opentelemetry-exporter-otlp-proto-grpc>=1.29",
    "opentelemetry-exporter-otlp-proto-http>=1.29",
]
dev = [
    "commitizen>=3.29",
    "hypothesis>=6.100",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0",
    "pyright>=1.1",
    "ruff>=0.8",
    "coverage>=7.0",
]

[project.urls]
Homepage = "https://github.com/AbdelazizMoustafa10m/orchcore"
Repository = "https://github.com/AbdelazizMoustafa10m/orchcore"
Documentation = "https://abdelazizmoustafa10m.github.io/orchcore"
Issues = "https://github.com/AbdelazizMoustafa10m/orchcore/issues"
Changelog = "https://github.com/AbdelazizMoustafa10m/orchcore/blob/main/CHANGELOG.md"

[tool.hatch.version]
source = "vcs"
raw-options = { local_scheme = "no-local-version" }

[tool.hatch.build.hooks.vcs]
version-file = "src/orchcore/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/orchcore"]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    ".release-please-manifest.json",
    "AGENTS.md",
    "CLAUDE.md",
    "doc/",
    "release-please-config.json",
    "scripts/",
    "tests/",
    "uv.lock",
    "zensical.toml",
]

[tool.pyright]
pythonVersion = "3.12"

[tool.mypy]
strict = true
python_version = "3.12"
plugins = ["pydantic.mypy"]
warn_return_any = true
warn_unused_configs = true
files = ["src", "tests", "examples"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
filterwarnings = [
    "error",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "examples", "scripts"]
exclude = ["src/orchcore/_version.py"]

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "UP",    # pyupgrade
    "B",     # flake8-bugbear
    "SIM",   # flake8-simplify
    "TC",    # flake8-type-checking
    "ARG",   # flake8-unused-arguments
    "S",     # flake8-bandit
    "RET",   # flake8-return
    "TRY",   # tryceratops
    "PT",    # flake8-pytest-style
    "PTH",   # flake8-use-pathlib
    "PL",    # pylint
    "RUF",   # ruff-specific rules
]
ignore = [
    # Legacy code raises built-in/public exception types with call-site detail.
    # The rest of TRY is active; custom exception-class work is out of scope
    # for the Phase 4 gate hardening pass.
    "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"src/orchcore/display/formatting.py" = ["PLR2004"]  # unit thresholds are clearer inline.
"src/orchcore/display/logging.py" = ["PLW0603"]  # color globals are intentionally recomputed in tests.
"src/orchcore/pipeline/engine.py" = ["PLR0912", "PLR0913", "PLR0915"]  # orchestration API/flow is deliberately broad.
"src/orchcore/pipeline/pipeline.py" = ["PLR0912", "PLR0913", "PLR0915"]  # public runner API plus validation flow.
"src/orchcore/recovery/rate_limit.py" = ["PLC0415", "PLR2004"]  # lazy zoneinfo import; time constants are domain literals.
"src/orchcore/recovery/retry.py" = ["PLR0911"]  # policy table is most readable as early returns.
"src/orchcore/registry/versioning.py" = ["PLR0911"]  # specifier matching is clearest as ordered clauses.
"src/orchcore/runner/subprocess.py" = ["PLR0912", "PLR0913", "PLR0915", "PLR2004"]  # subprocess orchestration has many explicit states.
"src/orchcore/signals/handler.py" = ["PLR2004"]  # two-signal escalation reads better inline.
"src/orchcore/stream/formats/_shared.py" = ["PLR0911"]  # per-tool extraction is a small dispatch table.
"src/orchcore/stream/formats/codex.py" = ["PLR0911"]  # parser branches mirror wire-event cases.
"src/orchcore/stream/formats/gemini.py" = ["PLR0911", "PLR2004"]  # parser branches mirror wire-event cases; 429 is protocol data.
"scripts/check_coverage_thresholds.py" = ["S314"]  # parses local coverage.py XML generated by this checkout.
"scripts/run_smoke_test.py" = ["PLC0415"]  # imports orchcore only after proving it is the installed distribution.
"tests/**" = [
    "PLC0415",  # local imports keep optional/fake dependencies scoped to a test.
    "PLR0912",
    "PLR0913",
    "PLR0915",
    "PLR2004",
    "PLW0108",
    "PT006",
    "PT011",
    "PT012",
    "PT017",
    "S101",    # allow assert in tests.
]

[tool.ruff.lint.isort]
known-first-party = ["orchcore"]

[tool.ruff.lint.pylint]
max-args = 8

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "scm"
tag_format = "v$version"
update_changelog_on_bump = false  # release-please handles changelog

[tool.coverage.run]
source = ["orchcore"]
relative_files = true
omit = ["src/orchcore/_version.py"]

[tool.coverage.report]
show_missing = true
fail_under = 95
